--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,10 +5,10 @@ on:
     branches:
       - master
 
-   paths-ignore:
-     - "docs/**"
-     - "openapi/**"
-     - ".vscode/**"
+  #  paths-ignore:
+  #    - "docs/**"
+  #    - "openapi/**"
+  #    - ".vscode/**"
 
 jobs:
  build:
