--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,14 +1,13 @@
 name: Flutter PR
 
 on:
-  push:
-    branches:
-      - master
-
-  #  paths-ignore:
-  #    - "docs/**"
-  #    - "openapi/**"
-  #    - ".vscode/**"
+ pull_request:
+   branches:
+     - "dev/sprint-**"
+   paths-ignore:
+     - "docs/**"
+     - "openapi/**"
+     - ".vscode/**"
 
 jobs:
  build:
