--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,14 @@
 name: Flutter PR
 
 on:
- pull_request:
-   branches:
-     - "dev/sprint-**"
-   paths-ignore:
-     - "docs/**"
-     - "openapi/**"
-     - ".vscode/**"
+  push:
+    branches:
+      - master
+
+  #  paths-ignore:
+  #    - "docs/**"
+  #    - "openapi/**"
+  #    - ".vscode/**"
 
 jobs:
  build:
